Always update placeholder's visibility

Always call SetPlaceholderVisibility if !placeholder
to prevent :placeholder-shown style from being applied

Bug: 884696
Change-Id: I5f078dad825de91253bc99d133dc7978a59bbda3
Reviewed-on: https://chromium-review.googlesource.com/c/1292666
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: HyeockJin Kim <kherootz@gmail.com>
Cr-Commit-Position: refs/heads/master@{#604529}