third_party/blink/renderer/core/html/forms/text_control_element.cc
@@ -181,6 +181,7 @@ void TextControlElement::UpdatePlaceholderVisibility() {
   HTMLElement* placeholder = PlaceholderElement();
   if (!placeholder) {
     UpdatePlaceholderText();
+    SetPlaceholderVisibility(PlaceholderShouldBeVisible());
     return;
   }
 
